OneDrive/Pictures/Desktop/manifest/pods/workshop on k8s/jenkins.yaml/statefulset.yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: nginxx
spec:
  rules:
   - host: nginx.com
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service: 
               name: nginxsvc
               port: 
                 number: 80
